--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@ Roundcube Webmail MarkAsJunk2
  * Add markasjunk2_permanently_remove option (#56)
  * Integration with Swipe plugin
  * %xds marco replaced with %h:<header name>
+ * Fix check_request() bypass in places using get_uids() [CVE-2018-9846] (req RC 8e543f8)
 
 Version 1.11.1 (2017-07-29, rc-1.3)
 =================================================
