--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Roundcube Webmail MarkAsJunk2
 =============================
 
+Version 1.10.1 (2018-04-17, rc-1.1.11)
+=================================================
+ * Fix check_request() bypass in places using get_uids() [CVE-2018-9846]
+
 Version 1.10 (2017-01-02, rc-1.1)
 =================================================
  * Add JS event markasjunk2-update to allow other plugins to influence the spam/ham options show
